@startuml
package "eu:happycoders:shop:application:port:in" {
    package "cart" {
        interface EmptyCartUseCase<<port>> {}
        interface GetCartUseCase<<port>> {}
        interface AddToCartUseCase<<port>> {}
    }
    package "product" {
        interface FindProductsUseCase<<port>> {}
    }
}

package "eu:happycoders:shop:application:service" {
    package "cart" {
        EmptyCartUseCase <|.. EmptyCartService
        GetCartUseCase <|.. GetCartService
        AddToCartUseCase <|.. AddToCartService
    }
    package "product" {
        FindProductsUseCase <|.. FindProductsService
    }
}

package "eu:happycoders:shop:application:port:out:persistence" {
        interface CartRepository<<port>>
        interface ProductRepository<<port>>

        AddToCartService --> CartRepository
        AddToCartService --> ProductRepository
        EmptyCartService --> CartRepository
        GetCartService --> CartRepository

        FindProductsService --> ProductRepository
}
@enduml